# KDHockeyApp

./: CMakeLists.txt  README.md
cmake/: android.toolchain.cmake
examples/: CMakeLists.txt
examples/crashreports/: CMakeLists.txt  crashreports.cpp
src/: CMakeLists.txt
src/KDHockeyApp/: CMakeLists.txt  KDHockeyAppConfig.h.cmake  KDHockeyAppConfig.h.qmake  KDHockeyAppManager.cpp  KDHockeyAppManager_windows.cpp
tools/: CMakeLists.txt  collectsymbols.cpp
